# Wormtrooper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Wormtrooper.sln  build.bat  reload.bat  vcpkg.json
.github/workflows/: msvc.yml
JavaEngine/: CMakeLists.txt  JavaEngine.vcxproj  JavaEngine.vcxproj.filters  UIElement.cpp  UIElement.h
JavaEngine/src/: JavaEngine.h  jepch.h
JavaEngine/src/JavaEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  ImguiTest.cpp  ImguiTest.h  Layer.cpp  Layer.h  LayerStack.h  Log.cpp  Log.h  Window.h
JavaEngine/src/JavaEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Window.h
JavaEngine/src/JavaEngine/Core/Dispatcher/: DispatcherBase.h  FnDispatcher.h
JavaEngine/src/JavaEngine/Core/Math/: Math.h  Point2D.h  Vector2D.h  VectorProjection.h
JavaEngine/src/JavaEngine/Events/: ApplicationEvent.h  Event.h  KeyCode.h  KeyEvent.h  MouseButton.h  MouseEvent.h
JavaEngine/src/JavaEngine/Front_End/UI/: UIElement.cpp  UIElement.h
JavaEngine/src/JavaEngine/Front_End/UI/UIElements/: UIImage.cpp  UIImage.h  UIText.cpp  UIText.h  UIWidget.cpp  UIWidget.h
JavaEngine/src/JavaEngine/Gameplay/: JActor.cpp  JActor.h  JObject.cpp  JObject.h
JavaEngine/src/JavaEngine/Gameplay/Components/: JObjectComponent.cpp  JObjectComponent.h  Transform.h
JavaEngine/src/JavaEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
JavaEngine/src/JavaEngine/LevelRenderer/: Scene.cpp  Scene.h
JavaEngine/src/JavaEngine/Physics/: AABB.h  CircleCollider.cpp  CircleCollider.h  ColliderBase.cpp  ColliderBase.h  ColliderIntersect.h  Collisions.h  ContactPoints.h  IntersectInfo.h  JWorld.cpp  JWorld.h  Manifold.h  PolygonCollider.cpp  PolygonCollider.h  RigidBody.h  ShapeIntersect.h
JavaEngine/src/JavaEngine/Renderer/SFML/: SFMLWindow.cpp  SFMLWindow.h
JavaEngine/src/Plateform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Wormtrooper/: CMakeLists.txt  Wormtrooper.vcxproj
Wormtrooper/src/: GameApp.cpp
Wormtrooper/src/Game/Actor/: FlatGround.cpp  FlatGround.h  Player.cpp  Player.h  Player2.cpp  Player2.h  Wall.cpp  Wall.h
Wormtrooper/src/Game/Scene/: MainScene.cpp  MainScene.h
